_old/compiler/src/test/resources/errors/todo/self_reference.jd
justification self_ref {

    evidence Su1 is "Evidence 1"

    Su1 supports Su1  // Component supports itself

}
